--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
 		"gulp-stylus": "^2.7.0",
 		"gulp-svg-sprite": "^1.5.0",
 		"webpack-stream": "^6.1.2"
+	},
+	"dependencies": {
+		"jquery": "^3.6.0",
+		"popper.js": "^1.16.1"
 	}
 }
