--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"webpack-stream": "^6.1.2"
 	},
 	"dependencies": {
+		"@fancyapps/fancybox": "^3.5.7",
 		"jquery": "^3.6.0",
 		"jquery-mask-plugin": "^1.14.16",
 		"popper.js": "^1.16.1"
