--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@fancyapps/fancybox": "^3.5.7",
 		"jquery": "^3.6.0",
 		"jquery-mask-plugin": "^1.14.16",
+		"nouislider": "^14.6.4",
 		"popper.js": "^1.16.1"
 	}
 }
